<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btn_reminder"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:onClick="onClick"
        android:layout_centerVertical="true"
        android:text="@string/view_reminder" />

    <Button
        android:id="@+id/btn_start_recording"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_reminder"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="46dp"
        android:onClick="onClick"
        android:text="@string/start_recording" />

    <Button
        android:id="@+id/btn_settings"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btn_reminder"
        android:layout_marginTop="49dp"
        android:onClick="onClick"
        android:text="@string/settings" />

</RelativeLayout>